# mcp-visgen

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-06-mcp-banana-get-design.md
mcp_visgen/: prompts.py  server.py  storage.py
