[project]
name = "mcp-visgen"
version = "0.1.0"
description = "MCP server for AI vision generation (images, video) via Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.0",
    "litellm>=1.80.0",
]

[project.scripts]
mcp-visgen = "mcp_visgen.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
